@@ -10,6 +10,8 @@ import java.util.Map;
 import java.util.Set;
 import java.util.Stack;
 import java.util.TreeSet;
+import java.util.function.Consumer;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import pl.idedyk.android.japaneselearnhelper.JapaneseAndroidLearnHelperApplication;
@@ -57,6 +59,7 @@ import pl.idedyk.japanese.dictionary.api.gramma.dto.GrammaFormConjugateRequest;
 import pl.idedyk.japanese.dictionary.api.gramma.dto.GrammaFormConjugateResult;
 import pl.idedyk.japanese.dictionary.api.gramma.dto.GrammaFormConjugateResultType;
 import pl.idedyk.japanese.dictionary2.api.helper.Dictionary2HelperCommon;
+import pl.idedyk.japanese.dictionary2.api.helper.Dictionary2NameHelperCommon;
 import pl.idedyk.japanese.dictionary2.jmdict.xsd.Gloss;
 import pl.idedyk.japanese.dictionary2.jmdict.xsd.JMdict;
 import pl.idedyk.japanese.dictionary2.jmdict.xsd.KanjiAdditionalInfoEnum;
@@ -67,6 +70,10 @@ import pl.idedyk.japanese.dictionary2.jmdict.xsd.ReadingInfoKana;
 import pl.idedyk.japanese.dictionary2.jmdict.xsd.ReadingInfoKanaType;
 import pl.idedyk.japanese.dictionary2.jmdict.xsd.Sense;
 import pl.idedyk.japanese.dictionary2.jmdict.xsd.SenseAdditionalInfo;
+import pl.idedyk.japanese.dictionary2.jmnedict.xsd.JMnedict;
+import pl.idedyk.japanese.dictionary2.jmnedict.xsd.TranslationalInfo;
+import pl.idedyk.japanese.dictionary2.jmnedict.xsd.TranslationalInfoTransDet;
+import pl.idedyk.japanese.dictionary2.jmnedict.xsd.TranslationalInfoTransDetAdditionalInfo;
 import pl.idedyk.japanese.dictionary2.kanjidic2.xsd.KanjiCharacterInfo;
 
 import android.app.Activity;
@@ -106,8 +113,8 @@ public class WordDictionaryDetails extends Activity {
 	private List<Integer> searchResultScrollToList = null;
 	private Integer searchScreenItemCurrentPos = null;
 
-	private DictionaryEntry dictionaryEntry = null;
 	private JMdict.Entry dictionaryEntry2 = null;
+	private JMnedict.Entry nameDictionaryEntry2 = null;
 
 	//
 
@@ -329,11 +336,11 @@ public class WordDictionaryDetails extends Activity {
 
 		Object item = getIntent().getSerializableExtra("item");
 
-		if (item instanceof DictionaryEntry) {
-			dictionaryEntry = (DictionaryEntry)item;
+		 if (item instanceof JMdict.Entry) {
+			 dictionaryEntry2 = (JMdict.Entry) item;
 
-		} else if (item instanceof JMdict.Entry) {
-			dictionaryEntry2 = (JMdict.Entry)item;
+		 } else if (item instanceof JMnedict.Entry) {
+			 nameDictionaryEntry2 = (JMnedict.Entry) item;
 
 		} else {
 			throw new RuntimeException(); // to nigdy nie powinno zdarzyc sie
@@ -342,7 +349,7 @@ public class WordDictionaryDetails extends Activity {
 		final ScrollView scrollMainLayout = (ScrollView) findViewById(R.id.word_dictionary_details_main_layout_scroll);
 		final LinearLayout detailsMainLayout = (LinearLayout) findViewById(R.id.word_dictionary_details_main_layout);
 
-		generatedDetails = generateDetails(dictionaryEntry, dictionaryEntry2, scrollMainLayout);
+		generatedDetails = generateDetails(dictionaryEntry2, nameDictionaryEntry2, scrollMainLayout);
 
 		fillDetailsMainLayout(generatedDetails, detailsMainLayout);
 
@@ -364,7 +371,12 @@ public class WordDictionaryDetails extends Activity {
 				if (dictionaryEntry2 != null) { // nowy format
 					detailsSb.append("\nEntry id: " + dictionaryEntry2.getEntryId()).append("\n\n");
 
-				} else { // stary format
+				} else if (nameDictionaryEntry2 != null) { // slowko z nazwa
+					detailsSb.append("\nEntry id: " + nameDictionaryEntry2.getEntryId()).append("\n\n");
+
+				}
+				/*
+				else { // stary format
 					detailsSb.append("\nId: " + dictionaryEntry.getId()).append("\n\n");
 					detailsSb.append("Kanji: " + (dictionaryEntry.getKanji() != null ? dictionaryEntry.getKanji() : "")).append("\n\n");
 					detailsSb.append("Kana: " + dictionaryEntry.getKana()).append("\n\n");
@@ -384,6 +396,7 @@ public class WordDictionaryDetails extends Activity {
 
 					detailsSb.append("Informacje dodatkowe: " + (dictionaryEntry.getInfo() != null ? dictionaryEntry.getInfo() : "")).append("\n\n");
 				}
+				*/
 
 				String chooseEmailClientTitle = getString(R.string.choose_email_client);
 
@@ -425,28 +438,29 @@ public class WordDictionaryDetails extends Activity {
 			final ScrollView scrollMainLayout = (ScrollView) findViewById(R.id.word_dictionary_details_main_layout_scroll);
 			final LinearLayout detailsMainLayout = (LinearLayout) findViewById(R.id.word_dictionary_details_main_layout);
 
-			generatedDetails = generateDetails(dictionaryEntry, dictionaryEntry2, scrollMainLayout);
+			generatedDetails = generateDetails(dictionaryEntry2, nameDictionaryEntry2, scrollMainLayout);
 
 			fillDetailsMainLayout(generatedDetails, detailsMainLayout);
 		}
 	}
 
-	private List<IScreenItem> generateDetails(final DictionaryEntry dictionaryEntry, JMdict.Entry dictionaryEntry2, final ScrollView scrollMainLayout) {
+	private List<IScreenItem> generateDetails(JMdict.Entry dictionaryEntry2, JMnedict.Entry nameDictionaryEntry2, final ScrollView scrollMainLayout) {
 
 		List<IScreenItem> report = new ArrayList<IScreenItem>();
 
 		// pobieramy pary slowek do wyswietlenia
-		List<Dictionary2HelperCommon.KanjiKanaPair> kanjiKanaPairList;
+		List<Dictionary2HelperCommon.KanjiKanaPair> kanjiKanaPairList = null;
+		List<Dictionary2NameHelperCommon.NameKanjiKanaPair> nameKanjiKanaPairList = null;
 
 		if (dictionaryEntry2 != null) { // nowy format
 			kanjiKanaPairList = Dictionary2HelperCommon.getKanjiKanaPairListStatic(dictionaryEntry2, true);
 
-		} else { // stary format
-			kanjiKanaPairList = null;
+		} else { // slowko z nazwa
+			nameKanjiKanaPairList = Dictionary2NameHelperCommon.getNameKanjiKanaPairListStatic(nameDictionaryEntry2);
 		}
 
 		// info dla slow typu name
-		if (dictionaryEntry != null && dictionaryEntry.isName() == true) {
+		if (nameDictionaryEntry2 != null) {
 
 			StringValue dictionaryEntryInfoName = new StringValue(getString(R.string.word_dictionary_details_name_info), 12.0f, 0);
 
@@ -475,39 +489,48 @@ public class WordDictionaryDetails extends Activity {
 				createWordKanjiKanaPairSection(report, kanjiKanaPair, kanjiKanaPairIdx == kanjiKanaPairList.size() - 1);
 			}
 
-		} else { // stary format
-			// stworzenie wirtualnego KanjiKanaPair
-			KanjiInfo kanjiInfo = new KanjiInfo();
+		} else { // slowko z nazwa
+			for (int nameKanjiKanaPairIdx = 0; nameKanjiKanaPairIdx < nameKanjiKanaPairList.size(); ++nameKanjiKanaPairIdx) {
+				Dictionary2NameHelperCommon.NameKanjiKanaPair nameKanjiKanaPair = nameKanjiKanaPairList.get(nameKanjiKanaPairIdx);
 
-			kanjiInfo.setKanji(dictionaryEntry.getKanji());
+				// stworzenie wirtualnego KanjiKanaPair
+				KanjiInfo virtualKanjiInfo = null;
 
-			ReadingInfo readingInfo = new ReadingInfo();
+				pl.idedyk.japanese.dictionary2.jmnedict.xsd.KanjiInfo nameKanjiInfo = nameKanjiKanaPair.getKanjiInfo();
 
-			ReadingInfoKana readingInfoKana = new ReadingInfoKana();
-			readingInfo.setKana(readingInfoKana);
+				if (nameKanjiInfo != null) {
+					virtualKanjiInfo = new KanjiInfo();
 
-			if (dictionaryEntry.getWordType() != null) {
-				readingInfoKana.setKanaType(ReadingInfoKanaType.valueOf(dictionaryEntry.getWordType().name()));
+					virtualKanjiInfo.setKanji(nameKanjiInfo.getKanji());
+				}
+
+				ReadingInfo virtualReadingInfo = new ReadingInfo();
+
+				ReadingInfoKana virtualReadingInfoKana = new ReadingInfoKana();
+				virtualReadingInfo.setKana(virtualReadingInfoKana);
+
+				virtualReadingInfoKana.setValue(nameKanjiKanaPair.getKana());
+				virtualReadingInfoKana.setRomaji(nameKanjiKanaPair.getRomaji());
+
+				Dictionary2HelperCommon.KanjiKanaPair virtualKanjiKanaPair = new Dictionary2HelperCommon.KanjiKanaPair(null, virtualKanjiInfo, virtualReadingInfo);
+
+				// pobieramy wszystkie skladniki slowa
+				createWordKanjiKanaPairSection(report, virtualKanjiKanaPair, nameKanjiKanaPairIdx == nameKanjiKanaPairList.size() - 1);
 			}
-
-			readingInfoKana.setValue(dictionaryEntry.getKana());
-			readingInfoKana.setRomaji(dictionaryEntry.getRomaji());
-
-			Dictionary2HelperCommon.KanjiKanaPair virtualKanjiKanaPair = new Dictionary2HelperCommon.KanjiKanaPair(null, kanjiInfo, readingInfo);
-
-			createWordKanjiKanaPairSection(report, virtualKanjiKanaPair, true);
 		}
 
 		// known kanji
 		Set<String> allKanjis = new LinkedHashSet<>();
 
-		if (dictionaryEntry != null && dictionaryEntry.isKanjiExists() == true) { // obsluga starego formatu
-			for (int idx = 0; idx < dictionaryEntry.getKanji().length(); ++idx) {
-				allKanjis.add("" + dictionaryEntry.getKanji().charAt(idx));
-			}
-
-		} else if (kanjiKanaPairList != null) { // nowy format
+		if (kanjiKanaPairList != null) { // nowy format
 			kanjiKanaPairList.stream().filter(f -> f.getKanjiInfo() != null).forEach(c -> {
+				for (int idx = 0; idx < c.getKanji().length(); ++idx) {
+					allKanjis.add("" + c.getKanji().charAt(idx));
+				}
+			});
+
+		} else if (nameKanjiKanaPairList != null) {
+			nameKanjiKanaPairList.stream().filter(f -> f.getKanjiInfo() != null).forEach(c -> {
 				for (int idx = 0; idx < c.getKanji().length(); ++idx) {
 					allKanjis.add("" + c.getKanji().charAt(idx));
 				}
@@ -572,6 +595,7 @@ public class WordDictionaryDetails extends Activity {
 		// Translate
 		report.add(new TitleItem(getString(R.string.word_dictionary_details_translate_label), 0));
 
+		/*
 		if (dictionaryEntry != null) { // generowanie po staremu
 			List<String> translates = dictionaryEntry.getTranslates();
 
@@ -579,7 +603,9 @@ public class WordDictionaryDetails extends Activity {
 				report.add(new StringValue(translates.get(idx), 20.0f, 0));
 			}
 
-		} else { // generowanie z danych zawartych w dictionaryEntry2
+		}
+		*/
+		if (dictionaryEntry2 != null) { // generowanie z danych zawartych w dictionaryEntry2
 			// mamy znaczenia
 			for (int senseIdx = 0; senseIdx < dictionaryEntry2.getSenseList().size(); ++senseIdx) {
 
@@ -587,87 +613,228 @@ public class WordDictionaryDetails extends Activity {
 				WordKanjiDictionaryUtils.PrintableDictionaryEntry2Sense printableDictionaryEntry2Sense = new WordKanjiDictionaryUtils.PrintableDictionaryEntry2Sense(sense);
 
 				// numer znaczenia
-				report.add(new StringValue("" + (senseIdx + 1), 20.0f, 0));
+				/*
+				if (dictionaryEntry2.getSenseList().size() != 1) {
+					StringValue senseNoStringValue = new StringValue("" + (senseIdx + 1), 20.0f, 0);
+					// senseNoStringValue.setTypeface(Typeface.create((String)null, Typeface.BOLD));
+
+					report.add(senseNoStringValue);
+				}
+				*/
+
+				// znaczenie
+				List<Gloss> polishGlossList = printableDictionaryEntry2Sense.getPolishGlossList();
+				SenseAdditionalInfo polishAdditionalInfo = printableDictionaryEntry2Sense.getPolishAdditionalInfo();
+
+				boolean wasAdditionalInfoAllTypes = false;
+				boolean existsGtypeNull = polishGlossList.stream().filter(f -> f.getGType() == null).count() > 0;
+
+				if (existsGtypeNull == true) { // jezeli istnieje gType rowne null, wiec pokazujemy tlumaczenia i wszelkie wyjasnienia osobno
+
+					// lista tlumaczen - gtype = null
+					for (Gloss currentGlossPol : polishGlossList) {
+
+						if (currentGlossPol.getGType() == null) {
+							String currentGlossPolReportValue = currentGlossPol.getValue();
+
+							StringValue currentGlossPolReportValueStringValue = new StringValue(currentGlossPolReportValue, 20.0f, 0);
+							currentGlossPolReportValueStringValue.setTypeface(Typeface.create((String) null, Typeface.BOLD));
+
+							report.add(currentGlossPolReportValueStringValue);
+						}
+					}
+
+					// lista tlumaczen - gtype != null jako informacje dodatkowe
+					for (Gloss currentGlossPol : polishGlossList) {
+
+						if (currentGlossPol.getGType() != null) {
+							wasAdditionalInfoAllTypes = true;
+
+							String currentGlossPolReportValue = currentGlossPol.getValue() +
+									" (" + Dictionary2HelperCommon.translateToPolishGlossType(currentGlossPol.getGType()) + ")";
+
+							report.add(new StringValue("  " + currentGlossPolReportValue, 15.0f, 1));
+						}
+					}
+
+				} else { // jezeli nie ma gType = null, wiec pokazujemy po staremu
+
+					for (Gloss currentGlossPol : polishGlossList) {
+						String currentGlossPolReportValue = currentGlossPol.getValue();
+
+						// sprawdzenie, czy wystepuje dodatkowy typ znaczenia
+						if (currentGlossPol.getGType() != null) {
+							currentGlossPolReportValue += " (" + Dictionary2HelperCommon.translateToPolishGlossType(currentGlossPol.getGType()) + ")";
+						}
+
+						StringValue currentGlossPolReportValueStringValue = new StringValue(currentGlossPolReportValue, 20.0f, 0);
+						currentGlossPolReportValueStringValue.setTypeface(Typeface.create((String)null, Typeface.BOLD));
+
+						report.add(currentGlossPolReportValueStringValue);
+					}
+				}
+
+				// informacje dodatkowe
+				if (polishAdditionalInfo != null) { // czy informacje dodatkowe istnieja
+					wasAdditionalInfoAllTypes = true;
+
+					report.add(new StringValue("  " + polishAdditionalInfo.getValue(), 15.0f, 1));
+				}
+
+				// przerwa
+				final boolean wasAdditionalInfoAllTypesAsFinal = wasAdditionalInfoAllTypes;
+
+				Consumer<Void> onetimeSpacerToDetailsGenerator = new Consumer<Void>() {
+					private boolean generatedSpacer = false;
+
+					@Override
+					public void accept(Void o) {
+						if (generatedSpacer == true) {
+							return;
+						}
+						generatedSpacer = true;
+
+						if (wasAdditionalInfoAllTypesAsFinal == false) {
+							return;
+						}
+
+						report.add(new StringValue("", 7.0f, 0));
+					}
+				};
 
 				// ograniczone do kanji/kana
 				String restrictedToKanjiKanaString = printableDictionaryEntry2Sense.getRestrictedToKanjiKanaString(getApplicationContext());
 
 				if (restrictedToKanjiKanaString != null) {
-					report.add(new StringValue(restrictedToKanjiKanaString, 13.0f, 0));
+					onetimeSpacerToDetailsGenerator.accept(null);
+					report.add(new StringValue("  " + restrictedToKanjiKanaString, 13.0f, 1));
 				}
 
 				// czesci mowy
 				String translatedToPolishPartOfSpeechEnum = printableDictionaryEntry2Sense.getTranslatedToPolishPartOfSpeechEnum(getApplicationContext());
 
 				if (translatedToPolishPartOfSpeechEnum != null) {
-					report.add(new StringValue(translatedToPolishPartOfSpeechEnum, 13.0f, 0));
+					onetimeSpacerToDetailsGenerator.accept(null);
+					report.add(new StringValue("  " + translatedToPolishPartOfSpeechEnum, 13.0f, 1));
 				}
 
 				// kategoria slowa
 				String translatedFieldEnum = printableDictionaryEntry2Sense.getTranslatedFieldEnum(getApplicationContext());
 
 				if (translatedFieldEnum != null) {
-					report.add(new StringValue(translatedFieldEnum, 13.0f, 0));
+					onetimeSpacerToDetailsGenerator.accept(null);
+					report.add(new StringValue("  " + translatedFieldEnum, 13.0f, 1));
 				}
 
 				// roznosci
 				String translatedMiscEnum = printableDictionaryEntry2Sense.getTranslatedMiscEnum(getApplicationContext());
 
 				if (translatedMiscEnum != null) {
-					report.add(new StringValue(translatedMiscEnum, 13.0f, 0));
+					onetimeSpacerToDetailsGenerator.accept(null);
+					report.add(new StringValue("  " + translatedMiscEnum, 13.0f, 1));
 				}
 
 				// dialekt
 				String translatedDialectEnum = printableDictionaryEntry2Sense.getTranslatedDialectEnum(getApplicationContext());
 
 				if (translatedDialectEnum != null) {
-					report.add(new StringValue(translatedDialectEnum, 13.0f, 0));
+					onetimeSpacerToDetailsGenerator.accept(null);
+					report.add(new StringValue("  " + translatedDialectEnum, 13.0f, 1));
 				}
 
 				// zagraniczne pochodzenie slowa
 				String joinedLanguageSource = printableDictionaryEntry2Sense.getJoinedLanguageSource(getApplicationContext());
 
 				if (joinedLanguageSource != null) {
-					report.add(new StringValue(joinedLanguageSource, 13.0f, 0));
+					onetimeSpacerToDetailsGenerator.accept(null);
+					report.add(new StringValue("  " + joinedLanguageSource, 13.0f, 1));
 				}
 
 				// odnosnic do innego slowa
 				String referenceToAnotherKanjiKana = printableDictionaryEntry2Sense.getReferenceToAnotherKanjiKana(getApplicationContext());
 
 				if (referenceToAnotherKanjiKana != null) {
-					report.add(new StringValue(referenceToAnotherKanjiKana, 13.0f, 0));
+					onetimeSpacerToDetailsGenerator.accept(null);
+					report.add(new StringValue("  " + referenceToAnotherKanjiKana, 13.0f, 1));
 				}
 
 				// odnosnic do przeciwienstwa
 				String antonym = printableDictionaryEntry2Sense.getAntonym(getApplicationContext());
 
 				if (antonym != null) {
-					report.add(new StringValue(antonym, 13.0f, 0));
+					onetimeSpacerToDetailsGenerator.accept(null);
+					report.add(new StringValue("  " + antonym, 13.0f, 1));
 				}
 
-				// znaczenie
-				List<Gloss> polishGlossList = printableDictionaryEntry2Sense.getPolishGlossList();
-				SenseAdditionalInfo polishAdditionalInfo = printableDictionaryEntry2Sense.getPolishAdditionalInfo();
+				// przerwa
+				report.add(new StringValue("", 10.0f, 0));
+			}
+
+		} else if (nameDictionaryEntry2 != null) { // obsluga slowka z nazwa
+			// mamy znaczenia
+			for (int translationInfoIdx = 0; translationInfoIdx < nameDictionaryEntry2.getTranslationInfo().size(); ++translationInfoIdx) {
+				TranslationalInfo translationalInfo = nameDictionaryEntry2.getTranslationInfo().get(translationInfoIdx);
+
+				// numer znaczenia
+				/*
+				if (nameDictionaryEntry2.getTranslationInfo().size() != 1) {
+					StringValue translationNoStringValue = new StringValue("" + (translationInfoIdx + 1), 20.0f, 0);
+					// senseNoStringValue.setTypeface(Typeface.create((String)null, Typeface.BOLD));
+
+					report.add(translationNoStringValue);
+				}
+				*/
 
 				// znaczenie
-				for (Gloss currentGlossPol : polishGlossList) {
+				List<TranslationalInfoTransDet> translationalInfoTransDetList = Dictionary2NameHelperCommon.getEnglishOrPolishTranslationalInfoTransDet(translationalInfo.getTransDet());
+				TranslationalInfoTransDetAdditionalInfo additionalInfo = Dictionary2NameHelperCommon.getFirstEnglishOrPolishTranslationalInfoTransDetAdditionalInfo(translationalInfo.getAddInfo());
 
-					String currentGlossPolReportValue = currentGlossPol.getValue();
+				boolean wasAdditionalInfoAllTypes = false;
 
-					// sprawdzenie, czy wystepuje dodatkowy typ znaczenia
-					if (currentGlossPol.getGType() != null) {
-						currentGlossPolReportValue += " (" + Dictionary2HelperCommon.translateToPolishGlossType(currentGlossPol.getGType()) + ")";
-					}
+				for (TranslationalInfoTransDet translationalInfoTransDet : translationalInfoTransDetList) {
+					String currentTranslationalInfoValue = translationalInfoTransDet.getValue();
 
-					StringValue currentGlossPolReportValueStringValue = new StringValue(currentGlossPolReportValue, 20.0f, 0);
-					currentGlossPolReportValueStringValue.setTypeface(Typeface.create((String)null, Typeface.BOLD));
+					StringValue currentTranslationalInfoStringValue = new StringValue(currentTranslationalInfoValue, 20.0f, 0);
+					currentTranslationalInfoStringValue.setTypeface(Typeface.create((String)null, Typeface.BOLD));
 
-					report.add(currentGlossPolReportValueStringValue);
+					report.add(currentTranslationalInfoStringValue);
 				}
 
 				// informacje dodatkowe
-				if (polishAdditionalInfo != null) { // czy informacje dodatkowe istnieja
-					report.add(new StringValue(polishAdditionalInfo.getValue(), 15.0f, 1));
+				if (additionalInfo != null) { // czy informacje dodatkowe istnieja
+					wasAdditionalInfoAllTypes = true;
+
+					report.add(new StringValue("  " + additionalInfo.getValue(), 15.0f, 1));
+				}
+
+				// przerwa
+				final boolean wasAdditionalInfoAllTypesAsFinal = wasAdditionalInfoAllTypes;
+
+				Consumer<Void> onetimeSpacerToDetailsGenerator = new Consumer<Void>() {
+					private boolean generatedSpacer = false;
+
+					@Override
+					public void accept(Void o) {
+						if (generatedSpacer == true) {
+							return;
+						}
+						generatedSpacer = true;
+
+						if (wasAdditionalInfoAllTypesAsFinal == false) {
+							return;
+						}
+
+						report.add(new StringValue("", 7.0f, 0));
+					}
+				};
+
+				// rodzaj nazwy
+				if (translationalInfo.getNameType().size() > 0) {
+					// zamiana na przetlumaczona postac
+					String translatedToPolishTranslationalInfoNameType = join("; ", Dictionary2NameHelperCommon.translateToPolishTranslationalInfoNameTypeList(translationalInfo.getNameType()));
+
+					onetimeSpacerToDetailsGenerator.accept(null);
+					report.add(new StringValue("  " + translatedToPolishTranslationalInfoNameType, 13.0f, 1));
 				}
 
 				// przerwa
@@ -681,13 +848,20 @@ public class WordDictionaryDetails extends Activity {
 		String info = null;
 		String kanji = null;
 
-		if (dictionaryEntry != null) {
-			info = dictionaryEntry.getInfo();
-			kanji = dictionaryEntry.getKanji();
-
-		} else if (kanjiKanaPairList != null) {
+		if (kanjiKanaPairList != null) {
 			for (Dictionary2HelperCommon.KanjiKanaPair kanjiKanaPair : kanjiKanaPairList) {
 				KanjiInfo kanjiInfo = kanjiKanaPair.getKanjiInfo();
+
+				if (kanjiInfo != null) { // wystarczy badac tylko jeden element
+					kanji = kanjiInfo.getKanji();
+				}
+			}
+
+			info = null;
+
+		} else if (nameKanjiKanaPairList != null) {
+			for (Dictionary2NameHelperCommon.NameKanjiKanaPair nameKanjiKanaPair : nameKanjiKanaPairList) {
+				pl.idedyk.japanese.dictionary2.jmnedict.xsd.KanjiInfo kanjiInfo = nameKanjiKanaPair.getKanjiInfo();
 
 				if (kanjiInfo != null) { // wystarczy badac tylko jeden element
 					kanji = kanjiInfo.getKanji();
@@ -713,6 +887,10 @@ public class WordDictionaryDetails extends Activity {
 		}
 
 		if (special == 0 && kanjiKanaPairList != null) { // dla slownika w formacie drugim nie generuj tej sekcji; informacje te znajda sie w sekcji znaczen
+			doAddAdditionalInfo = false;
+		}
+
+		if (special == 0 && nameKanjiKanaPairList != null) { // dla slownika nazw w formacie drugim nie generuj tej sekcji; informacje te znajda sie w sekcji znaczen
 			doAddAdditionalInfo = false;
 		}
 
@@ -768,10 +946,7 @@ public class WordDictionaryDetails extends Activity {
 		// atrybuty
 		final List<Attribute> attributeList;
 
-		if (dictionaryEntry != null) {
-			attributeList = dictionaryEntry.getAttributeList().getAttributeList();
-
-		} else if (dictionaryEntry2 != null) {
+		if (dictionaryEntry2 != null) {
 			attributeList = new ArrayList<>();
 
 			dictionaryEntry2.getMisc().getOldPolishJapaneseDictionary().getAttributeList().stream().forEach(attr -> {
@@ -782,6 +957,9 @@ public class WordDictionaryDetails extends Activity {
 
 				attributeList.add(attribute);
 			});
+
+		} else if (nameDictionaryEntry2 != null) {
+			attributeList = new ArrayList<>(); // noop
 
 		} else {
 			throw new RuntimeException(); // to nigdy nie powinno zdarzyc sie
@@ -875,7 +1053,7 @@ public class WordDictionaryDetails extends Activity {
 			}
 
 			if (addedSomeAttribute == false) {
-				report.removeLast(); // usuwamy tytul, skoro nie bylo zadnego atrybutu
+				report.remove(report.size() - 1); // usuwamy tytul, skoro nie bylo zadnego atrybutu
 
 			} else {
 				report.add(new StringValue("", 15.0f, 0)); // przerwa
@@ -885,11 +1063,11 @@ public class WordDictionaryDetails extends Activity {
 		// Word type
 		List<DictionaryEntry> dictionaryEntryListForWordType = new ArrayList<>();
 
-		if (dictionaryEntry != null) {
-			dictionaryEntryListForWordType.add(dictionaryEntry);
-
-		} else if (kanjiKanaPairList != null) {
+		if (kanjiKanaPairList != null) {
 			dictionaryEntryListForWordType.addAll(convertKanjiKanaPairListToOldDictionaryEntry(kanjiKanaPairList));
+
+		} else if (nameKanjiKanaPairList != null) {
+			// noop, nie pokazujemy tej sekcji
 		}
 
 		if (dictionaryEntryListForWordType.size() > 0) { // generujemy zawartosc typu slow
@@ -961,11 +1139,11 @@ public class WordDictionaryDetails extends Activity {
 		// Sentence example
 		List<String> exampleSentenceGroupIdsList = null;
 
-		if (dictionaryEntry != null) {
-			exampleSentenceGroupIdsList = dictionaryEntry.getExampleSentenceGroupIdsList();
-
-		} else if (dictionaryEntry2 != null) {
+		if (dictionaryEntry2 != null) {
 			exampleSentenceGroupIdsList = dictionaryEntry2.getMisc().getOldPolishJapaneseDictionary().getExampleSentenceGroupIdsList();
+
+		} else if (nameDictionaryEntry2 != null) {
+			// noop, nie pokazujemy tej sekcji
 		}
 
 		List<GroupWithTatoebaSentenceList> tatoebaSentenceGroupList = null;
@@ -1037,12 +1215,12 @@ public class WordDictionaryDetails extends Activity {
 		// dictionary groups
 		List<GroupEnum> groups = null;
 
-		if (dictionaryEntry != null) {
-			groups = dictionaryEntry.getGroups();
-
-		} else if (dictionaryEntry2 != null) {
+		if (dictionaryEntry2 != null) {
 			groups = dictionaryEntry2.getMisc().getOldPolishJapaneseDictionary().getGroupsList().stream().
 					map(m -> GroupEnum.valueOf(m)).collect(Collectors.toList());
+
+		} else if (nameDictionaryEntry2 != null) {
+			// noop
 		}
 
 		if (groups != null && groups.size() > 0) {
@@ -1061,14 +1239,13 @@ public class WordDictionaryDetails extends Activity {
 		// sprawdzenie, ktore slowka wchodza w sklad grup uzytkownika
 		List<DictionaryEntry> dictionaryEntryListToCheckUserGroups = new ArrayList<>();
 
-		if (dictionaryEntry != null && dictionaryEntry.isName() == false) {
-			dictionaryEntryListToCheckUserGroups.add(dictionaryEntry);
-
-		} else if (kanjiKanaPairList != null) {
+		if (kanjiKanaPairList != null) {
 			for (Dictionary2HelperCommon.KanjiKanaPair kanjiKanaPair : kanjiKanaPairList) {
 				DictionaryEntry oldDictionaryEntry = Dictionary2HelperCommon.convertKanjiKanaPairToOldDictionaryEntry(kanjiKanaPair);
 
-				dictionaryEntryListToCheckUserGroups.add(oldDictionaryEntry);
+				if (oldDictionaryEntry != null) {
+					dictionaryEntryListToCheckUserGroups.add(oldDictionaryEntry);
+				}
 			}
 		}
 		// sprawdzenie, czy ktores slowko wchodzi w sklad grup uzytkownika
@@ -1131,10 +1308,7 @@ public class WordDictionaryDetails extends Activity {
 		Map<Integer, GrammaFormConjugateAndExampleEntry> grammaFormConjugateAndExampleEntryMap = new LinkedHashMap<>();
 		List<DictionaryEntry> dictionaryEntryListForGrammaAndExamples = new ArrayList<>();
 
-		if (dictionaryEntry != null) {
-			dictionaryEntryListForGrammaAndExamples.add(dictionaryEntry);
-
-		} else if (kanjiKanaPairList != null) {
+		if (kanjiKanaPairList != null) {
 			dictionaryEntryListForGrammaAndExamples.addAll(convertKanjiKanaPairListToOldDictionaryEntry(kanjiKanaPairList));
 		}
 
@@ -1637,13 +1811,15 @@ public class WordDictionaryDetails extends Activity {
 			userGroupListIcon.setOnClickListener(new OnClickListener() {
 				@Override
 				public void onClick(View view) {
-					Intent intent = new Intent(getApplicationContext(), UserGroupActivity.class);
-
 					DictionaryEntry dictionaryEntry = Dictionary2HelperCommon.convertKanjiKanaPairToOldDictionaryEntry(kanjiKanaPair);
 
-					intent.putExtra("itemToAdd", dictionaryEntry);
+					if (dictionaryEntry != null) {
+						Intent intent = new Intent(getApplicationContext(), UserGroupActivity.class);
 
-					startActivityForResult(intent, ADD_ITEM_ID_TO_USER_GROUP_ACTIVITY_REQUEST_CODE);
+						intent.putExtra("itemToAdd", dictionaryEntry);
+
+						startActivityForResult(intent, ADD_ITEM_ID_TO_USER_GROUP_ACTIVITY_REQUEST_CODE);
+					}
 				}
 			});
 			actionTableRow.addScreenItem(userGroupListIcon);
@@ -2072,6 +2248,20 @@ public class WordDictionaryDetails extends Activity {
 				}
 			}
 		};
+	}
+
+	private static String join(CharSequence delimiter, List<String> elements) {
+		StringBuffer result = new StringBuffer();
+
+		for (int idx = 0; idx < elements.size(); ++idx) {
+			result.append(elements.get(idx));
+
+			if (idx != elements.size() - 1) {
+				result.append(", ");
+			}
+		}
+
+		return result.toString();
 	}
 
 	private class CopyToClipboard implements OnClickListener {
